# tint2

./: README  README.md  meson.build  tint2rc
src/: Makefile  area.c  area.h  battery.c  battery.h  clock.c  clock.h  common.c  common.h  config.c  launcher.c  launcher.h  panel.c  panel.h  server.c  server.h  systraybar.c  systraybar.h  task.c  task.h  taskbar.c  taskbar.h  taskbarname.c  timer.c  tint.c  tooltip.c  tooltip.h  version.h  window.c  xsettings-client.c  xsettings-client.h  xsettings-common.c  xsettings-common.h
